--- a/templates/pages/html/proyectos.html
+++ b/templates/pages/html/proyectos.html
@@ -18,11 +18,12 @@
     </header>
 
     <nav class="nav">
-        <a href="/templates/index.html" data-tooltip="Página principal del sitio"><i class="fas fa-home"></i> Inicio</a>
-        <a href="/templates/pages/html/proyectos.html" data-tooltip="Explora todos los proyectos disponibles" class="active"><i class="fas fa-project-diagram"></i> Proyectos</a>
+        <a href="/templates/index.html" data-tooltip="Página principal del sitio" ><i class="fas fa-home"></i> Inicio</a>
+        <a href="/templates/pages/html/proyectos.html" data-tooltip="Explora todos los proyectos disponibles" class="active" ><i class="fas fa-project-diagram"></i> Proyectos</a>
         <a href="/templates/pages/html/organizaciones.html" data-tooltip="Conoce las organizaciones que están haciendo la diferencia"><i class="fas fa-building"></i> Organizaciones</a>
-        <a href="/templates/pages/html/donar.html" data-tooltip="Contribuye a las causas que te importan"><i class="fas fa-hand-holding-heart"></i> Donar</a>
-        <a href="/templates/pages/html/perfil.html" data-tooltip="Gestiona tu perfil y tus donaciones"><i class="fas fa-user"></i> Mi Perfil</a>
+        <a href="/templates/pages/html/donar.html" data-tooltip="Contribuye a las causas que te importan"><i class="fas fa-donate"></i> Donar</a>
+        <a href="/templates/pages/html/perfil.html" data-tooltip="Gestiona tu perfil y tus donaciones" ><i class="fas fa-user"></i> Mi Perfil</a>
+        <a href="/templates/pages/html/recibir.html" data-tooltip="Conecta con quienes ofrecen ayudas"><i class="fas fa-hand-holding-heart"></i> Recibir</a>
     </nav>
 
     <main class="container">
