--- a/templates/pages/html/login.html
+++ b/templates/pages/html/login.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <i class="fas fa-hands-helping"></i>
-            <h1>Conexión Solidaria</h1>
+            <h1><a href="/templates/index.html" style="text-decoration: none; color: inherit;">Conexión Solidaria</a></h1>
         </div>
     </header>
 
