--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conexión Solidaria</title>
+    <title>Community</title>
     <link rel="stylesheet" href="/src/static/styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -13,8 +13,7 @@
     <header>
         <div class="logo">
             <i class="fas fa-hands-helping"></i>
-            <h1><a href="/src/templates/pages/html/update_files.html" style="text-decoration: none; color: inherit;">Conexión
-                    Solidaria</a></h1>
+            <h1><a href="/src/templates/pages/html/update_files.html" style="text-decoration: none; color: inherit;">Community</a></h1>
         </div>
         <p>Uniendo donantes con causas importantes</p>
     </header>
@@ -194,7 +193,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Conexión Solidaria. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Community. Todos los derechos reservados.</p>
     </footer>
 </body>
 
