--- a/src/templates/pages/html/login.html
+++ b/src/templates/pages/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión - Conexión Solidaria</title>
+    <title>Iniciar Sesión - Community</title>
     <link rel="stylesheet" href="/src/static/styles/style.css">
     <link rel="stylesheet" href="/src/static/styles/css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <i class="fas fa-hands-helping"></i>
-            <h1><a href="/src/templates/index.html" style="text-decoration: none; color: inherit;">Conexión Solidaria</a></h1>
+            <h1><a href="/src/templates/index.html" style="text-decoration: none; color: inherit;">Community</a></h1>
         </div>
     </header>
 
