--- a/src/templates/pages/html/update_files.html
+++ b/src/templates/pages/html/update_files.html
@@ -69,7 +69,7 @@
             <input type="password" id="contraseña" required>
         </div>
 
-        <button type="submit">Registrar</button>
+        <button type="submit_2">Registrar</button>
     </form>
 
     <div id="resultado"></div>
@@ -77,7 +77,7 @@
     <script>
         // Registro de usuario ############################################################################################ 
 
-        ddocument.getElementById('registroForm').addEventListener('submit', async (e) => {
+        document.getElementById('registroForm').addEventListener('submit_2', async (e) => {
     e.preventDefault();
     
     // Recoger todos los datos del formulario
