--- a/src/templates/pages/login.html
+++ b/src/templates/pages/login.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo">
             <i class="fas fa-hands-helping"></i>
-            <h1><a href="/src/templates/index.html" style="text-decoration: none; color: inherit;">Community</a></h1>
+            <h1><a href="/inicio" style="text-decoration: none; color: inherit;">Community</a></h1>
         </div>
     </header>
 
@@ -34,7 +34,7 @@
                     </button>
                 </form>
                 <div class="login-footer">
-                    <p>¿No tienes una cuenta? <a href="/src/templates/pages/registro.html">Regístrate aquí</a></p>
+                    <p>¿No tienes una cuenta? <a href="/registrarse">Regístrate aquí</a></p>
                     
                 </div>
             </div>
