--- a/src/templates/pages/login.html
+++ b/src/templates/pages/login.html
@@ -32,6 +32,7 @@
                     <button type="submit" class="btn-login">
                         <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
                     </button>
+                    <div id="error-mensaje" style="color: red; margin-top: 10px; text-align: center;"></div>
                 </form>
                 <div class="login-footer">
                     <p>¿No tienes una cuenta? <a href="/registrarse">Regístrate aquí</a></p>
@@ -40,5 +41,7 @@
             </div>
         </div>
     </div>
+
+    <script src="/src/static/scripts/js/login.js"></script>
 </body>
 </html>
