--- a/src/templates/pages/organizaciones.html
+++ b/src/templates/pages/organizaciones.html
@@ -53,10 +53,10 @@
                     </tbody>
                 </table>
             </div>
-            <a href="/nuevaOrganizacion" class="btn-crear">
+            <button onclick="window.location.href='/nuevaOrganizacion'" class="btn-crear">
                 <i class="fas fa-plus"></i>
                 Crear organización
-            </a>
+            </button>
             
         </div>
 
