Add footer to multiple HTML templates with copyright notice

--- a/src/templates/pages/nuevoProyecto.html
+++ b/src/templates/pages/nuevoProyecto.html
@@ -112,6 +112,10 @@
         </div>
     </div>
 
+    <footer>
+        <p>&copy; 2024 Community. Todos los derechos reservados.</p>
+    </footer>
+
     <script src="/src/static/scripts/js/nuevoProyecto.js"></script>
 </body>
 </html>
