--- a/src/templates/pages/login.html
+++ b/src/templates/pages/login.html
@@ -42,6 +42,10 @@
         </div>
     </div>
 
+    <footer>
+        <p>&copy; 2024 Community. Todos los derechos reservados.</p>
+    </footer>
+
     <script src="/src/static/scripts/js/login.js"></script>
 </body>
 </html>
