--- a/src/templates/pages/nuevaOR.html
+++ b/src/templates/pages/nuevaOR.html
@@ -68,6 +68,11 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <p>&copy; 2024 Community. Todos los derechos reservados.</p>
+    </footer>
+
     <script src="/src/static/scripts/js/nuevaOR.js"></script>
 </body>
 </html>
