--- a/src/templates/pages/registro.html
+++ b/src/templates/pages/registro.html
@@ -89,6 +89,9 @@
         </div>
     </div>
 
+    <footer>
+        <p>&copy; 2024 Community. Todos los derechos reservados.</p>
+    </footer>
     <script src="/src/static/scripts/js/registro.js"></script>
 </body>
 </html>
